# doccano-client

./: .darglint  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  Pipfile  README.md  index.html  mypy.ini  objects.inv  pyproject.toml  setup.py  sitemap.xml  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 03-install.md  04-request.md
.github/workflows/: build.yml  ci.yml  codeql-analysis.yml  mkdocs-deployment.yml  package-installation.yml  pypi-publish.yml  pythonpackage.yml
cli/: index.html
doccano_api_client/: __init__.py  cli.py
doccano_api_client/beta/: README.md  __init__.py  client.py
doccano_api_client/beta/controllers/: __init__.py  annotation.py  comment.py  example.py  project.py  relation.py  relation_type.py  span.py  span_type.py
doccano_api_client/beta/models/: __init__.py  examples.py  projects.py  relation.py  span.py  span_type.py
doccano_api_client/beta/tests/: test_client.py  test_full_integration_tests.py
doccano_api_client/beta_pythonic_client/: README.md  client.py
doccano_api_client/beta_pythonic_client/controllers/: __init__.py  annotation.py  comment.py  example.py  label.py  project.py
doccano_api_client/beta_pythonic_client/models/: __init__.py  examples.py  labels.py  projects.py
doccano_api_client/beta_pythonic_client/tests/: conftest.py  test_client.py  test_full_integration_tests.py
doccano_api_client/cli/: commands.py  entity.py  estimators.py  usecases.py
doccano_client/: __init__.py  client.py  exceptions.py
doccano_client/beta/: README.md  client.py
doccano_client/beta/controllers/: __init__.py  annotation.py  category.py  category_type.py  comment.py  example.py  label.py  member.py  project.py  relation.py  relation_type.py  span.py  span_type.py  text.py
doccano_client/beta/models/: __init__.py  annotations.py  category.py  category_type.py  comments.py  examples.py  members.py  projects.py  relation.py  relation_type.py  text.py
doccano_client/beta/tests/: test_full_integration_tests.py
doccano_client/beta/utils/: response.py
doccano_client/cli/: commands.py  estimators.py  usecases.py
doccano_client/cli/active_learning/: languages.py  manager.py  models.py  preparation.py  sampling.py  strategies.py  trainer.py
doccano_client/clients/: comment.py  data_export.py  data_import.py  example.py  label.py  label_type.py  metrics.py  project.py  role.py  task_status.py  user.py
doccano_client/models/: comment.py  data_download.py  data_upload.py  example.py  label.py  label_type.py  member.py  metrics.py  project.py  role.py  task_status.py  user.py  user_details.py
doccano_client/repositories/: base.py  comment.py  data_download.py  data_export.py  data_import.py  data_upload.py  example.py  label.py  label_type.py  member.py  metrics.py  project.py  role.py  task_status.py  user.py  user_details.py
doccano_client/services/: label_type.py
doccano_client/usecase/: comment.py  data_download.py  data_export.py  data_import.py  data_upload.py  example.py  label.py  label_type.py  member.py  project.py  role.py  user_details.py
docs/: cli.md  faq.md  index.md  install.md  mkdocs.yml  requirements.txt  usage.md
install/: index.html
src/: __init__.py
tests/: conftest.py
tests/clients/: test_comment.py  test_data_export.py  test_data_import.py  test_example.py  test_label.py  test_label_types.py  test_metrics.py  test_project.py  test_role.py  test_task_status.py  test_user.py
tests/integration/repositories/: test_comment.py  test_data_download.py  test_data_export.py  test_data_import.py  test_data_upload.py  test_example.py  test_label.py  test_label_types.py  test_member.py  test_metrics.py  test_project.py  test_role.py  test_task_status.py  test_user.py
tests/integration/usecase/: test_comment.py  test_data_download.py  test_data_export.py  test_data_import.py  test_data_upload.py  test_example.py  test_label.py  test_label_type.py  test_member.py  (+3 more)
tests/repositories/: test_comment.py  test_data_export.py  test_data_import.py  test_example.py  test_label.py  test_label_types.py  test_metrics.py  test_role.py  test_task_status.py  test_user.py
tests/usecase/: test_comment_usecase.py  test_data_export_usecase.py  test_data_import_usecase.py  test_example_usecase.py  test_label_type.py  test_label_type_usecase.py  test_label_usecase.py  test_project_usecase.py  test_role_usecase.py
usage/: index.html
(+128 files in other folders)
